--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.0",
+    "emoji-picker-react": "^4.4.9",
     "firebase": "^9.23.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
